# locatoAi

./: CLAUDE.md  README.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  runtime-settings.json
backend/ailocator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: application_state_wiring.py  error_handler.py  error_handler_registry.py  health_router.py  index.md  main.py  runtime_diet_mode.py
backend/app/bl/: CLAUDE.md  ports.py  query_orchestrator.py
backend/app/bl/agent/: build_plan.py  client.py  generate_layer_metadata.py  llm_client.py  runtime_diet_mode.py  select_layers.py  skill_field_references.py
backend/app/bl/catalog/: catalog_service.py  layers_repository.py  mqs_sync.py  tyche_activation.py
backend/app/bl/executor/: engine.py
backend/app/bl/plan/: models.py  validators.py
backend/app/bl/ports/: layer_field.py  layer_meta.py  layer_parameter.py  layer_parameter_option.py  layer_schema.py  layers_repository.py  llm_client.py  mqs_mirror.py  mqs_snapshot_source.py  provider.py  provider_registry.py
backend/app/bl/providers/: provider.py  registry.py
backend/app/bl/query_orchestrator/: query_orchestrator.py  query_outcome.py  stage_timer.py  sum_usage.py
backend/app/common/: CLAUDE.md  config.py  errors.py  geo.py  logging.py  runtime_settings.py  settings_provider.py  text_normalize.py
backend/app/common/config/: settings.py  settings_provider.py
backend/app/common/errors/: agent_error.py  ailocator_error.py  execution_error.py  layer_not_found_error.py  plan_validation_error.py  provider_error.py
backend/app/common/logging/: configurator.py  console_logger.py
backend/app/common/runtime_settings/: normalizers.py  runtime_settings.py  runtime_settings_store.py
backend/app/common/utils/: geo_utils.py
backend/app/dal/: CLAUDE.md  feedback_repository.py  layers_repository.py  mqs_mirror_store.py  postgres.py
backend/app/dal/database/: postgres.py
backend/app/service/: CLAUDE.md  agent_router.py  catalog_router.py  dependencies.py  deps.py  dto.py  feedback_request.py  feedback_router.py  models_router.py  mqs_mirror_router.py  plan_router.py  query_event_sink.py  query_router.py  settings_router.py
backend/data/: accidents.geojson  cinemas.geojson  roundabouts.geojson  schools.geojson
backend/logs/: requests.jsonl
backend/scripts/: enrich_layer_tags.py  eval_build_plan.py  eval_geo_genericity.py  eval_select_layers.py  tags_backup.txt
backend/tests/: conftest.py  mock_gis_provider.py  test_agent_content.py  test_build_plan.py  test_catalog_edit.py  test_catalog_queryable_layers.py  test_cubes_autocomplete_endpoint.py  test_cubes_provider.py  test_executor.py  test_feedback_repository.py  test_flapi_packages_provider.py  test_generate_layer_metadata.py  test_geo.py  test_logging.py  test_moving_entity_ops.py  test_mqs_mirror.py  test_mqs_provider.py  test_mqs_sync.py  test_near_all.py  test_openai_client.py  test_plan_model.py  test_query_dto.py  test_query_request_id.py  test_runtime_settings.py  test_select_layers.py  test_spatial_relations.py  test_text_normalize.py  test_tyche_activation.py  test_tyche_provider.py
(+295 files in other folders)
