[project]
name = "ailocator-backend"
version = "0.1.0"
description = "AiLocator geo-query backend: FastAPI + plan executor (MVP, no AI yet)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "httpx>=0.27",
    "structlog>=24.1",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.2",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
