[project]
name = "ailocator-backend"
version = "0.1.0"
description = "AiLocator geo-query backend: FastAPI + plan executor (MVP)"
requires-python = ">=3.8"
# Target runtime is Python 3.8.10 (see Dockerfile). Markers keep newer
# versions available when developing on modern interpreters.
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.30; python_version >= '3.9'",
    "uvicorn>=0.23,<0.34; python_version < '3.9'",
    "pydantic>=2.7; python_version >= '3.9'",
    "pydantic>=2.5,<2.11; python_version < '3.9'",
    "pydantic-settings>=2.2; python_version >= '3.9'",
    "pydantic-settings>=2.2,<2.8; python_version < '3.9'",
    "geopandas>=1.0; python_version >= '3.10'",
    "geopandas==0.13.2; python_version < '3.10'",
    "shapely>=2.0",
    "pyproj>=3.6; python_version >= '3.9'",
    "pyproj>=3.4,<3.6; python_version < '3.9'",
    "pandas>=2.1; python_version >= '3.9'",
    "pandas>=2.0,<2.1; python_version < '3.9'",
    "numpy>=1.26; python_version >= '3.9'",
    "numpy>=1.24,<1.25; python_version < '3.9'",
    "httpx>=0.27",
    "structlog>=24.1,<25",
    "psycopg[binary]>=3.1,<3.2",
    "openai>=1.40,<2",
    "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
