[project]
name = "ailocator-backend"
version = "0.1.0"
description = "AiLocator geo-query backend: FastAPI + plan executor (MVP)"
requires-python = "==3.8.10"
# Target runtime is Python 3.8.10.
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.23,<0.34",
    "pydantic>=2.5,<2.11",
    "pydantic-settings>=2.2,<2.8",
    "geopandas==0.13.2",
    "fiona>=1.9,<1.10",  # 1.10 ships no py3.8 wheels (needs GDAL to build)
    "shapely>=2.0",
    "pyproj>=3.4,<3.6",
    "pandas>=2.0,<2.1",
    "numpy>=1.24,<1.25",
    "httpx>=0.27",
    "structlog>=24.1,<25",
    "psycopg[binary]>=3.1,<3.2",
    "openai>=1.40,<2",
    "typing-extensions>=4.8",
    "rapidfuzz>=3.9,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<8.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
